--- a/src/qpsqlconnectiondialog.ui
+++ b/src/qpsqlconnectiondialog.ui
@@ -28,22 +28,22 @@
   <widget class="QPushButton" name="okButton">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>160</y>
-     <width>71</width>
+     <width>61</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>Сохранить</string>
+    <string>ОК</string>
    </property>
   </widget>
   <widget class="QPushButton" name="cancelButton">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>180</x>
      <y>160</y>
-     <width>71</width>
+     <width>61</width>
      <height>23</height>
     </rect>
    </property>
@@ -61,7 +61,7 @@
     </rect>
    </property>
    <property name="title">
-    <string>Пользовательские данные</string>
+    <string>Настройки соединения</string>
    </property>
    <widget class="QLabel" name="textLabel4">
     <property name="geometry">
@@ -134,6 +134,12 @@
       <height>20</height>
      </rect>
     </property>
+    <property name="inputMethodHints">
+     <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
+    </property>
    </widget>
    <widget class="QLineEdit" name="hostName">
     <property name="geometry">
@@ -145,7 +151,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QSpinBox" name="port">
+   <widget class="SpinBox" name="port">
     <property name="geometry">
      <rect>
       <x>90</x>
@@ -161,11 +167,18 @@
      <number>65535</number>
     </property>
     <property name="value">
-     <number>5432</number>
+     <number>-1</number>
     </property>
    </widget>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>SpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>spinbox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
