--- a/src/qpsqlconnectiondialog.ui
+++ b/src/qpsqlconnectiondialog.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>250</width>
-    <height>200</height>
+    <height>220</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>250</width>
-    <height>200</height>
+    <height>220</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>250</width>
-    <height>200</height>
+    <height>220</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>160</y>
+     <y>180</y>
      <width>61</width>
      <height>23</height>
     </rect>
@@ -42,7 +42,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>160</y>
+     <y>180</y>
      <width>61</width>
      <height>23</height>
     </rect>
@@ -57,7 +57,7 @@
      <x>10</x>
      <y>10</y>
      <width>231</width>
-     <height>141</height>
+     <height>161</height>
     </rect>
    </property>
    <property name="title">
@@ -67,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>28</y>
+      <y>24</y>
       <width>80</width>
       <height>20</height>
      </rect>
@@ -80,7 +80,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>106</y>
+      <y>128</y>
       <width>80</width>
       <height>20</height>
      </rect>
@@ -93,7 +93,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>54</y>
+      <y>76</y>
       <width>80</width>
       <height>20</height>
      </rect>
@@ -106,7 +106,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>102</y>
       <width>80</width>
       <height>20</height>
      </rect>
@@ -119,7 +119,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>28</y>
+      <y>24</y>
       <width>131</width>
       <height>20</height>
      </rect>
@@ -129,7 +129,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>54</y>
+      <y>76</y>
       <width>131</width>
       <height>20</height>
      </rect>
@@ -145,7 +145,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>80</y>
+      <y>102</y>
       <width>131</width>
       <height>20</height>
      </rect>
@@ -155,7 +155,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>106</y>
+      <y>128</y>
       <width>131</width>
       <height>20</height>
      </rect>
@@ -170,6 +170,29 @@
      <number>-1</number>
     </property>
    </widget>
+   <widget class="QLabel" name="textLabel4_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>80</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>База данных:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="dataBase">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>50</y>
+      <width>131</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <customwidgets>
@@ -179,6 +202,15 @@
    <header>spinbox.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>userName</tabstop>
+  <tabstop>dataBase</tabstop>
+  <tabstop>password</tabstop>
+  <tabstop>hostName</tabstop>
+  <tabstop>port</tabstop>
+  <tabstop>okButton</tabstop>
+  <tabstop>cancelButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
