--- a/src/qsqlconnectiondialog.ui
+++ b/src/qsqlconnectiondialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QPSQLConnectionDialog</class>
- <widget class="QDialog" name="QPSQLConnectionDialog">
+ <class>QSQLConnectionDialog</class>
+ <widget class="QDialog" name="QSQLConnectionDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
