--- a/src/searchaccountdialog.ui
+++ b/src/searchaccountdialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="search">
      <property name="maximumSize">
       <size>
        <width>200</width>
