--- a/src/searchaccountdialog.ui
+++ b/src/searchaccountdialog.ui
@@ -6,29 +6,71 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1093</width>
-    <height>431</height>
+    <width>502</width>
+    <height>326</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Поиск читателя</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
-    <widget class="QLineEdit" name="search">
-     <property name="maximumSize">
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="2" rowspan="6">
+    <widget class="QTableView" name="tableView"/>
+   </item>
+   <item row="0" column="1">
+    <widget class="QWidget" name="widget" native="true">
+     <property name="minimumSize">
       <size>
-       <width>200</width>
-       <height>16777215</height>
+       <width>155</width>
+       <height>55</height>
       </size>
      </property>
-     <property name="placeholderText">
-      <string>Поиск</string>
-     </property>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>61</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Искать по:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="search">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>30</y>
+        <width>151</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>200</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="placeholderText">
+       <string>Поиск</string>
+      </property>
+      <property name="clearButtonEnabled">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>0</y>
+        <width>91</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
-   </item>
-   <item>
-    <widget class="QTableView" name="tableView"/>
    </item>
   </layout>
  </widget>
