--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -5,5 +5,6 @@
         <file>images/reader.png</file>
         <file>images/book.png</file>
         <file>images/request.png</file>
+        <file>images/addAccount.png</file>
     </qresource>
 </RCC>
