--- a/src/searchaccountwidget.ui
+++ b/src/searchaccountwidget.ui
@@ -98,13 +98,19 @@
      <item alignment="Qt::AlignHCenter">
       <widget class="QPushButton" name="addAccountButton">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="text">
-        <string>Добавить карту...</string>
+        <string>Добавить карту</string>
        </property>
       </widget>
      </item>
