--- a/src/library.ui
+++ b/src/library.ui
@@ -58,7 +58,7 @@
       <item>
        <widget class="QLineEdit" name="lineEdit_2">
         <property name="placeholderText">
-         <string>ebuchiy poisk</string>
+         <string/>
         </property>
        </widget>
       </item>
