--- a/src/searchaccountwidget.ui
+++ b/src/searchaccountwidget.ui
@@ -152,6 +152,9 @@
      <property name="editTriggers">
       <set>QAbstractItemView::AllEditTriggers</set>
      </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::SingleSelection</enum>
      </property>
@@ -201,6 +204,15 @@
    </property>
    <property name="shortcutContext">
     <enum>Qt::WindowShortcut</enum>
+   </property>
+  </action>
+  <action name="openHistory">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/images/takenBooks.png</normaloff>:/images/takenBooks.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;История взятых книг</string>
    </property>
   </action>
  </widget>
