--- a/src/searchaccountwidget.ui
+++ b/src/searchaccountwidget.ui
@@ -95,7 +95,7 @@
        </layout>
       </widget>
      </item>
-     <item alignment="Qt::AlignHCenter">
+     <item>
       <widget class="QPushButton" name="addAccountButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -212,7 +212,10 @@
      <normaloff>:/images/takenBooks.png</normaloff>:/images/takenBooks.png</iconset>
    </property>
    <property name="text">
-    <string>&amp;История взятых книг</string>
+    <string>&amp;История заявок</string>
+   </property>
+   <property name="toolTip">
+    <string>История заявок</string>
    </property>
   </action>
  </widget>
