--- a/src/searchbookwidget.ui
+++ b/src/searchbookwidget.ui
@@ -111,14 +111,20 @@
           </attribute>
          </widget>
         </item>
-        <item row="7" column="0">
-         <widget class="QPushButton" name="addNewBookButton">
-          <property name="text">
-           <string>Добавить новую книгу</string>
-          </property>
-         </widget>
-        </item>
        </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="addNewBookButton">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Добавить новую книгу</string>
+       </property>
       </widget>
      </item>
      <item>
@@ -158,6 +164,9 @@
      </property>
      <property name="editTriggers">
       <set>QAbstractItemView::AllEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::SingleSelection</enum>
